--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
+    "react-countdown": "^2.3.5",
     "tailwindcss": "^3.4.0"
   }
 }
